--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
     <img src="./assets/logo.svg" alt="">
 </div>
 <div class="nav-item">
-    <div class="menu-item"> <a style="color:#169E00;" href="./home.html">Home</a></div>
+    <div class="menu-item"> <a style="color:#169E00;" href="./index.html">Home</a></div>
     <div class="menu-item"><a style="color:#169E00;" href="./aboutus.html">About Us</a></div>
     <div class="menu-item"><a style="color:#169E00;" href="./services.html">Services</a></div>
     <div class="menu-item customCTA sche"><a href="./schedulenow.html" style="color:white;">Schedule Now</a></div>
@@ -148,7 +148,7 @@
                 <div class="list">
                     <h2>Quick Links<h2>
                         <ul class="ulist">
-                            <li><a style="color: white;"><a href="./home.html">Home</a></a></li>
+                            <li><a style="color: white;"><a href="./index.html">Home</a></a></li>
                             <li><a style="color: white;"><a href="./aboutus.html">About Us</a></a></li>
                             <li><a style="color: white;"><a href="./services.html">Services</a></a></li>
                             <li><a style="color: white;"><a href="./schedulenow.html">Schedule Now</a></a></li>
