--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encirkel</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="resposive.css">
+    <link rel="icon" href="/assets/logo.svg">
 
     <script src="https://kit.fontawesome.com/a525b5a320.js" crossorigin="anonymous"></script>
 </head>
