--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encirkel</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="resposive.css">
+    <link rel="icon" href="/assets/logo.svg">
     <script src="https://kit.fontawesome.com/a525b5a320.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -154,6 +154,6 @@
                     </ul>
     </div>
 </footer>
-
+<script src="app.js"></script>
 </body>
 </html>
